--- a/src/assets/styles/comments.css
+++ b/src/assets/styles/comments.css
@@ -1,156 +1,161 @@
 .ReplyBox {
-    position: relative;
-    padding-top: 15px;
-    margin-bottom: 27px;
-    line-height: 19px;
-  }
-  .ReplyBox .like_board {
-    display: inline-block;
-    position: relative;
-    vertical-align: top;
-    font-size: 13px;
-  }
-  .button_comment {
-    padding-left: 5px;
-    color: black;
-  }
-  .ReplyBox .button_comment .icon_area {
-    display: inline-block;
-    position: relative;
-    margin-right: 2px;
-    vertical-align: top;
-  }
-  .ReplyBox .button_comment {
-    display: inline-block;
-    vertical-align: top;
-    font-size: 1;
-  }
-  .CommentBox {
-    margin-top: 15px;
-    border-top: 1px solid #ebecef;
-  }
-  .CommentBox .comment_option {
-    position: relative;
-    padding-top: 16px;
-    margin-bottom: 11px;
-  }
-  .CommentBox .comment_option .comment_title {
-    float: left;
-    margin-top: 3px;
-    margin-right: 1px;
-    font-size: 17px;
-  }
-  .CommentBox .comment_option .comment_tab .comment_refresh_button {
-    display: inline-block;
-    position: relative;
-    width: 23px;
-    height: 23px;
-    margin-right: 2px;
-    background: transparent;
-    border: 0;
-    outline: 0;
-    /* vertical-align: top; */
-  }
-  .CommentBox .comment_option .comment_tab .comment_refresh_button:before {
-    content: "";
-    border-radius: 50%;
-    /* border: 1px solid red; */
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  .CommentBox .comment_option:after {
-    content: "";
-    display: block;
-    clear: both;
-  }
-  dl,
-  ol,
-  ul {
-    list-style: none;
-  }
-  body,
-  button,
-  dd,
-  dl,
-  dt,
-  fieldset,
-  form,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  input,
-  legend,
-  li,
-  ol,
-  p,
-  select,
-  table,
-  td,
-  textarea,
-  th,
-  ul {
-    margin: 0;
-    padding: 0;
-  }
-  ul {
-    display: block;
-    /* list-style-type: disc; */
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 2px;
-  }
-  
-  .CommentBox .comment_list .CommentItem:first-child {
-    border-top: 0;
-  }
-  .CommentBox .comment_list .CommentItem {
-    position: relative;
-    border-top: 1px solid #f2f2f2;
-  }
-  .CommentBox .comment_list .comment_area {
-    position: relative;
-    padding: 15px 23px 10px 0;
-  }
-  .CommentBox .comment_list .comment_box {
-    padding-left: 0;
-  }
-  .CommentBox .comment_list .comment_nick_box {
-    margin-bottom: 4px;
-  }
-  .CommentBox .comment_list .comment_text_box {
-    position: relative;
-    font-size: 13px;
-    word-break: break-all;
-    word-wrap: break-word;
-  }
-  .CommentBox .comment_list .comment_nick_box .comment_nickname {
-    font-weight: 700;
-  }
-  .CommentBox .comment_list .comment_text_box .comment_text_view {
-    overflow: hidden;
-  }
-  .CommentBox .comment_list .comment_text_box .text_comment {
-    line-height: 17px;
-    word-break: break-all;
-    word-wrap: break-word;
-    vertical-align: top;
-  }
-  .CommentBox .comment_list .comment_info_box {
-    margin-top: 7px;
-    font-size: 12px;
-    color: #979797;
-  }
-  .CommentBox .comment_list .comment_info_box .comment_info_date {
-    margin-right: 8px;
-  }
-  .CommentBox a {
-    color: inherit;
-  }
+  position: relative;
+  padding-top: 15px;
+  margin-bottom: 27px;
+  line-height: 19px;
+}
+.ReplyBox .like_board {
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+  font-size: 13px;
+}
+.button_comment {
+  padding-left: 5px;
+  color: black;
+}
+.ReplyBox .button_comment .icon_area {
+  display: inline-block;
+  position: relative;
+  margin-right: 2px;
+  vertical-align: top;
+}
+.ReplyBox .button_comment {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 1;
+}
+.CommentBox {
+  margin-top: 15px;
+  border-top: 1px solid #ebecef;
+}
+.CommentBox .comment_option {
+  position: relative;
+  padding-top: 16px;
+  margin-bottom: 11px;
+}
+.CommentBox .comment_option .comment_title {
+  float: left;
+  margin-top: 1px;
+  margin-right: 1px;
+  font-size: 17px;
+}
+.CommentBox .comment_option .comment_tab .comment_refresh_button {
+  display: inline-block;
+  position: relative;
+  width: 23px;
+  height: 23px;
+  margin-right: 2px;
+  background: transparent;
+  border: 0;
+  outline: 0;
+  /* vertical-align: top; */
+}
+.CommentBox .comment_option .comment_tab .comment_refresh_button:before {
+  content: "";
+  border-radius: 50%;
+  /* border: 1px solid red; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.CommentBox .comment_option:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+dl,
+ol,
+ul {
+  list-style: none;
+}
+body,
+button,
+dd,
+dl,
+dt,
+fieldset,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+input,
+legend,
+li,
+ol,
+p,
+select,
+table,
+td,
+textarea,
+th,
+ul {
+  margin: 0;
+  padding: 0;
+}
+ul {
+  display: block;
+  /* list-style-type: disc; */
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 2px;
+}
+
+.CommentBox .comment_list .CommentItem:first-child {
+  border-top: 0;
+}
+.CommentBox .comment_list .CommentItem {
+  position: relative;
+  border-top: 1px solid #f2f2f2;
+}
+.CommentBox .comment_list .comment_area {
+  position: relative;
+  padding: 15px 23px 10px 0;
+}
+.CommentBox .comment_list .comment_box {
+  padding-left: 0;
+}
+.CommentBox .comment_list .comment_nick_box {
+  margin-bottom: 4px;
+}
+.CommentBox .comment_list .comment_text_box {
+  position: relative;
+  font-size: 13px;
+  word-break: break-all;
+  word-wrap: break-word;
+}
+.CommentBox .comment_list .comment_nick_box .comment_nickname {
+  font-weight: 700;
+}
+.CommentBox .comment_list .comment_text_box .comment_text_view {
+  overflow: hidden;
+}
+.CommentBox .comment_list .comment_text_box .text_comment {
+  line-height: 17px;
+  word-break: break-all;
+  word-wrap: break-word;
+  vertical-align: top;
+}
+.CommentBox .comment_list .comment_info_box {
+  margin-top: 7px;
+  font-size: 12px;
+  color: #979797;
+}
+.CommentBox .comment_list .comment_info_box .comment_info_date {
+  margin-right: 8px;
+}
+.CommentBox a {
+  color: inherit;
+}
+.comment_count {
+  font-size: 15px;
+  margin-left: 3px;
+  font-weight: 700;
+}
