Refactor : 게시글 수정 버튼을 게시글 내부로 이동

--- a/src/assets/styles/comments.css
+++ b/src/assets/styles/comments.css
@@ -49,6 +49,7 @@
   background: transparent;
   border: 0;
   outline: 0;
+  color: black;
   /* vertical-align: top; */
 }
 .CommentBox .comment_option .comment_tab .comment_refresh_button:before {
